@@ -34,7 +34,8 @@ void ftp_remove(ftp_t*, char*);
 void ftp_mkcon(ftp_t *);
 void ftp_close(ftp_t*);
 void ftp_cat(ftp_t*, char*);
-void ftp_download_single(ftp_t*, char*);
+void ftp_download_single(ftp_t*, char*, int);
+void ftp_download(ftp_t*, char*);
 void ftp_upload_single(ftp_t*, char*);
 void ftp_delete(ftp_t*, char*);
 void ftp_cwd(ftp_t*, char*);
