@@ -1,3 +1,6 @@
 * Version 1.0 11-10-2015:
 		* Initial release.
 
+* added support for downloading folder.
+* tidy tcp_connect functionstcp: tidy tcp_connect functions.
+
